[package]
name    = "toml_dom-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
toml_dom = { path = ".." }

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_set_value"
path = "fuzz_targets/fuzz_set_value.rs"
test = false
doc  = false
